Fixes z-index levels for elements

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -406,7 +406,7 @@
 	left: 0;
 	// margin: auto;
 	&.hidden {
-		z-index: -10;
+		z-index: -5;
 	}
 	.popup-window {
 		display: block;
@@ -418,7 +418,7 @@
 		// transform: translate(-50%, -50%);
 		min-width: 20rem;
 		max-width: 90%;
-		z-index: 1;
+		z-index: 5;
 		.popup-content {
 			padding: 1rem;
 		}
